kubernetes_deployment/zipline_public/network-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-psql-pod
  namespace: zipline-public
spec:
  containers:
  - name: ubuntu
    image: postgres:15
    command: ["sleep"]
    args: ["infinity"]
    resources:
      requests:
        memory: "64Mi"
        cpu: "100m"
      limits:
        memory: "128Mi"
        cpu: "200m"
