kubernetes_deployment/zipline_public/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipline-ingress
  namespace: zipline-public
spec:
  defaultBackend:
    service:
      name: zipline-service
      port:
        number: 3000
  ingressClassName: tailscale
  tls:
    - hosts:
        - ts
